<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">TFL</string>

    <string name="nav_chats">Chats</string>
    <string name="nav_map">Map</string>
    <string name="nav_vault">Vault</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_settings">Settings</string>

    <string name="not_yet_available">Not available yet</string>
</resources>
